[metadata]
name = falcon
version = attr: falcon.__version__
description = The ultra-reliable, fast ASGI+WSGI framework for building data plane APIs at scale.
long_description_content_type = text/x-rst
url = https://falconframework.org
author = Kurt Griffiths
author_email = mail@kgriffs.com
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Cython
keywords =
    asgi
    wsgi
    web
    api
    framework
    rest
    http
    cloud
project_urls =
    Documentation=https://falcon.readthedocs.io/en/stable/
    Release Notes=https://falcon.readthedocs.io/en/stable/changes/
    Source=https://github.com/falconry/falcon
    Issue Tracker=https://github.com/falconry/falcon/issues
    Funding=https://opencollective.com/falcon
    Chat=https://gitter.im/falconry/user

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
tests_require =
    testtools
    requests
    pyyaml
    pytest
    pytest-runner

[options.packages.find]
exclude =
    examples
    tests

[options.entry_points]
console_scripts =
    falcon-bench = falcon.cmd.bench:main
    falcon-inspect-app = falcon.cmd.inspect_app:main
    falcon-print-routes = falcon.cmd.inspect_app:route_main

[egg_info]
# TODO replace
tag_build = dev1

[aliases]
test=pytest

[flake8]
max-complexity = 15
exclude = .ecosystem,.eggs,.git,.tox,.venv,build,dist,docs,examples,falcon/bench/nuts
extend-ignore = F403,W504,E203,I202
max-line-length = 88
import-order-style = google
application-import-names = falcon,examples
builtins = ignore,attr,defined
per-file-ignores =
    **/__init__.py:F401,E402
    falcon/uri.py:F401
